--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
         <img class="cabecalho-imagem" src="logo.svg"
             alt="logo com texto liga feminina com uma bolinha de tenis na parte superior">
         <ul class="lista-cabecalho">
-            <li class="item-lista-cabecalho">Liga Feminina</li>
-            <li class="item-lista-cabecalho">Atletas</li>
+            <li class="item-lista-cabecalho">Contato</li>
+            <li class="item-lista-cabecalho">Localização</li>
         </ul>
     </header>
     <section class="tenis">
         <div class="div-tenis">
-            <h2 class="titulo-tenis">Liga Feminina</h2>
+            <h2 class="titulo-tenis">Mundo Fit</h2>
             <p class="tenis-texto-um">
-                Bem-vindo à página oficial da Liga Feminina de Tênis!
+                Bem-vindo à página oficial do nosso espaço fit!
             </p>
             <p class="tenis-texto-dois">
-                Mergulhe em um mundo apaixonante que une força, elegância e pura determinação no universo do tênis
-                feminino. Nossa liga é mais do que uma competição esportiva; é um celeiro de talentos, um palco para
-                conquistas extraordinárias e um ponto de encontro para todas as apaixonadas pelo esporte.
+                Mergulhe em um mundo apaixonante que une força, elegância e pura determinação no mundo
+                fitnes. Nosso espaço é mais do que uma lanchonete, é um celeiro de talentos, um palco para
+                conquistas extraordinárias e um ponto de encontro para todas e todos apaixonados pela vida saudável.
             </p>
             <p class="tenis-texto-tres">
-                Bem-vindo a um universo de elegância, habilidade e paixão – bem-vindo à Liga Feminina de Tênis!
+                Bem-vindo a um universo de sabor, dedicação e paixão – bem-vindo ao Mundo Fit Cascavel!
             </p>
         </div>
         <img src="Tenis-raquete.svg" alt="duas raquetes de tenis" class="tenis-imagem">
     </section>
     <section class="atletas">
-        <h2 class="atleta-titulo">Quem são nossas atletas</h2>
+        <h2 class="atleta-titulo">Conheça nosso cardápio</h2>
         <div class="atletas-todos">
             <div class="atleta-div">
                 <img class="atleta-imagem" src="fer.png" alt="">
-                <h3 class="atleta-nome">Fer Machado</h3>
+                <h3 class="atleta-nome">foto1</h3>
                 <a href="https://www.instagram.com/invites/contact/?i=3yalx26omtqh&utm_content=5dk9wo">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
@@ -49,7 +49,7 @@
             </div>
             <div class="atleta-div">
                 <img class="atleta-imagem" src="fran.png" alt="">
-                <h3 class="atleta-nome">Fran Bied</h3>
+                <h3 class="atleta-nome">foto2</h3>
                 <a href="https://www.instagram.com/fran_bied?igsh=dXQ3ejUyZHRqMnV5">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
@@ -59,7 +59,7 @@
             </div>
             <div class="atleta-div">
                 <img class="atleta-imagem" src="gabi.png" alt="">
-                <h3 class="atleta-nome">Gabi Dias</h3>
+                <h3 class="atleta-nome">foto3</h3>
                 <a href="https://www.instagram.com/gabidiiass?igsh=MW43a29nZnJtenJ5dQ==">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
@@ -69,7 +69,7 @@
             </div>
             <div class="atleta-div">
                 <img class="atleta-imagem" src="lauri.png" alt="">
-                <h3 class="atleta-nome">Lauri Bellé</h3>
+                <h3 class="atleta-nome">foto4</h3>
                 <a href="https://www.instagram.com/lauriana.araujo?igsh=MTAzaWR2aDQwNm9zMQ==">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
@@ -79,7 +79,7 @@
             </div>
             <div class="atleta-div">
                 <img class="atleta-imagem" src="maria.png" alt="">
-                <h3 class="atleta-nome">Maria Ozana</h3>
+                <h3 class="atleta-nome">foto5</h3>
                 <a href="https://www.instagram.com/maria_ozanazanchet?igsh=aDU2ZHpoZWFteGZn">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
@@ -89,7 +89,7 @@
             </div>
             <div class="atleta-div">
                 <img class="atleta-imagem" src="mayra.png" alt="">
-                <h3 class="atleta-nome">Mayra Mazzo</h3>
+                <h3 class="atleta-nome">foto6</h3>
                 <a href="https://www.instagram.com/mayra_damaceno_mazzo?igsh=cGRwNzIzejNnbTY=">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
@@ -99,7 +99,7 @@
             </div>
             <div class="atleta-div">
                 <img class="atleta-imagem" src="pri.png" alt="">
-                <h3 class="atleta-nome">Pri Meneguzzi</h3>
+                <h3 class="atleta-nome">foto7</h3>
                 <a href="https://www.instagram.com/primeneguzzi?igsh=NGx2Mnk1OXgxZDU1">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
@@ -109,7 +109,7 @@
             </div>
             <div class="atleta-div">
                 <img class="atleta-imagem" src="tati.png" alt="">
-                <h3 class="atleta-nome">Tati Franceschini</h3>
+                <h3 class="atleta-nome">foto8</h3>
                 <a href="https://www.instagram.com/tattifranceschini?igsh=MWJ2dmN0bDJwcnlzNQ==">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
