--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Bem-vindo à página oficial do nosso espaço fit!
             </p>
             <p class="tenis-texto-dois">
-                Mergulhe em um mundo apaixonante que une força, elegância e pura determinação no mundo
+                Mergulhe em um mundo apaixonante que une força, foco e pura determinação no mundo
                 fitnes. Nosso espaço é mais do que uma lanchonete, é um celeiro de talentos, um palco para
                 conquistas extraordinárias e um ponto de encontro para todas e todos apaixonados pela vida saudável.
             </p>
