--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="logo.svg"
-            alt="logo Mundo Fit">
+            alt="Logo Mundo Fit">
         <ul class="lista-cabecalho">
             <li class="item-lista-cabecalho">Contato</li>
             <li class="item-lista-cabecalho">Localização</li>
