--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="logo.svg"
+        <img class="cabecalho-imagem" src="logo.jpg"
             alt="Logo Mundo Fit">
         <ul class="lista-cabecalho">
             <li class="item-lista-cabecalho">Contato</li>
