--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Bem-vindo a um universo de sabor, dedicação e paixão – bem-vindo ao Mundo Fit Cascavel!
             </p>
         </div>
-        <img src="Tenis-raquete.svg" alt="Foto do espaço" class="tenis-imagem">
+        <img src="FotoCapa.jpg" alt="Foto do espaço" class="tenis-imagem">
     </section>
     <section class="atletas">
         <h2 class="atleta-titulo">Conheça nosso cardápio</h2>
