--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="atleta-div">
                 <img class="atleta-imagem" src="fer.png" alt="">
                 <h3 class="atleta-nome">foto1</h3>
-                <a href="https://www.instagram.com/invites/contact/?i=3yalx26omtqh&utm_content=5dk9wo">
+                <a href="https://www.instagram.com/p/C2w30EaAG-x/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
                     <img class="atleta-icone" src="instagram (1).png" alt="">
                 </a>
                 <a href="#">
