--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img class="atleta-imagem" src="fer.png" alt="">
                 <h3 class="atleta-nome">foto1</h3>
                 <a href="https://www.instagram.com/p/C2w30EaAG-x/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
-                    <img class="atleta-icone" src="instagram (1).png" alt="">
+                    <img class="atleta-icone" src="instagram1.jpg" alt="">
                 </a>
                 <a href="#">
                     <img class="atleta-icone" src="raqueteicone.png" alt="">
