--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-logo" src="logo.svg" alt="">
+        <img class="rodape-logo" src="logo.jpg" alt="">
         <div class="rodape-div">
             <img class="rodape-icone" src="phone.png" alt="">
             <h4 class="rodape-fone">(45)9 9990-1527</h4>
