--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 
 <body>
+
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="logo.jpg"
             alt="Logo Mundo Fit">
         <ul class="lista-cabecalho">
             <li class="item-lista-cabecalho">Contato</li>
             <li class="item-lista-cabecalho">Localização</li>
+
+            <nav>
+                <ul>
+                  <li><a href="contato.html">Contato</a></li>
+                  <li><a href="localizacao.html">Localização</a></li>
+                </ul>
+             </nav>
         </ul>
     </header>
+
     <section class="tenis">
         <div class="div-tenis">
             <h2 class="titulo-tenis">Mundo Fit</h2>
