--- a/contato.html
+++ b/contato.html
@@ -17,9 +17,36 @@
      </nav>
   </header>
 
-    <div class="contato">
- Outro texto
-</div>
+  <section class="tenis">
+    <div class="div-tenis">
+        <h2 class="titulo-tenis">Liga Feminina</h2>
+        <p class="tenis-texto-um">
+            Bem-vindo à página oficial da Liga Feminina de Tênis!
+        </p>
+        <p class="tenis-texto-dois">
+            Mergulhe em um mundo apaixonante que une força, elegância e pura determinação no universo do tênis
+            feminino. Nossa liga é mais do que uma competição esportiva; é um celeiro de talentos, um palco para
+            conquistas extraordinárias e um ponto de encontro para todas as apaixonadas pelo esporte.
+        </p>
+        <p class="tenis-texto-tres">
+            Bem-vindo a um universo de elegância, habilidade e paixão – bem-vindo à Liga Feminina de Tênis!
+        </p>
+    </div>
+    <img src="Tenis-raquete.svg" alt="duas raquetes de tenis" class="tenis-imagem">
+</section>
+<section class="atletas">
+    <h2 class="atleta-titulo">Quem são nossas atletas</h2>
+    <div class="atletas-todos">
+        <div class="atleta-div">
+            <img class="atleta-imagem" src="fer.png" alt="">
+            <h3 class="atleta-nome">Fer Machado</h3>
+            <a href="https://www.instagram.com/invites/contact/?i=3yalx26omtqh&utm_content=5dk9wo">
+                <img class="atleta-icone" src="instagram (1).png" alt="">
+            </a>
+            <a href="#">
+                <img class="atleta-icone" src="raqueteicone.png" alt="">
+            </a>
+        </div>
 
   </body>
 </html>
