--- a/contato.html
+++ b/contato.html
@@ -7,15 +7,16 @@
   </head>
   <body>
 
-    <header>
-
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="localizacao.html">Localização</a></li>
-        </ul>
-     </nav>
-  </header>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="logo.svg"
+        alt="logo com texto liga feminina com uma bolinha de tenis na parte superior">
+        <nav>
+            <ul class="lista-cabecalho">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="localizacao.html">Localização</a></li>
+            </ul>
+        </nav>
+    </header>
 
   <section class="tenis">
     <div class="div-tenis">
