--- a/contato.html
+++ b/contato.html
@@ -1,53 +1,64 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contato</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<html lang="pt-br">
 
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="logo.svg"
-        alt="logo com texto liga feminina com uma bolinha de tenis na parte superior">
-        <nav>
-            <ul class="lista-cabecalho">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="localizacao.html">Localização</a></li>
-            </ul>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <title>Contato</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-  <section class="tenis">
-    <div class="div-tenis">
-        <h2 class="titulo-tenis">Liga Feminina</h2>
-        <p class="tenis-texto-um">
-            Bem-vindo à página oficial da Liga Feminina de Tênis!
-        </p>
-        <p class="tenis-texto-dois">
-            Mergulhe em um mundo apaixonante que une força, elegância e pura determinação no universo do tênis
-            feminino. Nossa liga é mais do que uma competição esportiva; é um celeiro de talentos, um palco para
-            conquistas extraordinárias e um ponto de encontro para todas as apaixonadas pelo esporte.
-        </p>
-        <p class="tenis-texto-tres">
-            Bem-vindo a um universo de elegância, habilidade e paixão – bem-vindo à Liga Feminina de Tênis!
-        </p>
-    </div>
-    <img src="Tenis-raquete.svg" alt="duas raquetes de tenis" class="tenis-imagem">
-</section>
-<section class="atletas">
-    <h2 class="atleta-titulo">Quem são nossas atletas</h2>
-    <div class="atletas-todos">
-        <div class="atleta-div">
-            <img class="atleta-imagem" src="fer.png" alt="">
-            <h3 class="atleta-nome">Fer Machado</h3>
-            <a href="https://www.instagram.com/invites/contact/?i=3yalx26omtqh&utm_content=5dk9wo">
-                <img class="atleta-icone" src="instagram (1).png" alt="">
-            </a>
-            <a href="#">
-                <img class="atleta-icone" src="raqueteicone.png" alt="">
-            </a>
-        </div>
+    <body>
+        <header class="cabecalho">
+            <img class="cabecalho-imagem" src="logo.jpg"
+            alt="Logo Mundo Fit">
+            <nav>
+                <ul class="lista-cabecalho">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="localizacao.html">Localização</a></li>
+                </ul>
+            </nav>
+        </header>
 
-  </body>
+        <section class="tenis">
+            <div class="div-tenis">
+                <h2 class="titulo-tenis">Liga Feminina</h2>
+                <p class="tenis-texto-um">
+                    Bem-vindo à página oficial da Liga Feminina de Tênis!
+                </p>
+                <p class="tenis-texto-dois">
+                    Mergulhe em um mundo apaixonante que une força, elegância e pura determinação no universo do tênis
+                    feminino. Nossa liga é mais do que uma competição esportiva; é um celeiro de talentos, um palco para
+                    conquistas extraordinárias e um ponto de encontro para todas as apaixonadas pelo esporte.
+                </p>
+                <p class="tenis-texto-tres">
+                    Bem-vindo a um universo de elegância, habilidade e paixão – bem-vindo à Liga Feminina de Tênis!
+                </p>
+            </div>
+            <img src="Tenis-raquete.svg" alt="duas raquetes de tenis" class="tenis-imagem">
+        </section>
+
+        <section class="atletas">
+            <h2 class="atleta-titulo">Quem são nossas atletas</h2>
+            <div class="atletas-todos">
+                <div class="atleta-div">
+                    <img class="atleta-imagem" src="fer.png" alt="">
+                    <h3 class="atleta-nome">Contato</h3>
+                    <a href="https://www.instagram.com/invites/contact/?i=3yalx26omtqh&utm_content=5dk9wo">
+                        <img class="atleta-icone" src="instagram (1).png" alt="">
+                    </a>
+                    <a href="#"><img class="atleta-icone" src="raqueteicone.png" alt=""></a>
+                </div>
+            </div>
+        </section>
+
+        <footer class="rodape">
+            <img class="rodape-logo" src="logo.jpg" alt="">
+            <div class="rodape-div">
+                <img class="rodape-icone" src="phone.png" alt="">
+                <h4 class="rodape-fone">(45)9 99977-4176</h4>
+            </div>
+            
+        </footer>
+
+    </body>
 </html>
