--- a/contato.html
+++ b/contato.html
@@ -20,12 +20,12 @@
         </header>
 
         <section class="atletas">
-            <h2 class="atleta-titulo">Quem são nossas atletas</h2>
+            <h2 class="atleta-titulo">Nossos meios de contato</h2>
             <div class="atletas-todos">
                 <div class="atleta-div">
                     <img class="atleta-imagem" src="fer.png" alt="">
-                    <h3 class="atleta-nome">Contato</h3>
-                    <a href="https://www.instagram.com/invites/contact/?i=3yalx26omtqh&utm_content=5dk9wo">
+                    <h3 class="atleta-nome">Instagram</h3>
+                    <a href="https://www.instagram.com/mundofit.cascavel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
                         <img class="atleta-icone" src="instagram (1).png" alt="">
                     </a>
                     <a href="#"><img class="atleta-icone" src="raqueteicone.png" alt=""></a>
