--- a/contato.html
+++ b/contato.html
@@ -30,6 +30,16 @@
                     </a>
                     <a href="#"><img class="atleta-icone" src="raqueteicone.png" alt=""></a>
                 </div>
+                <div class="atleta-div">
+                    <img class="atleta-imagem" src="fran.png" alt="">
+                    <h3 class="atleta-nome">Facebook</h3>
+                    <a href="https://www.facebook.com/mundofitcascavel/">
+                        <img class="atleta-icone" src="instagram (1).png" alt="">
+                    </a>
+                    <a href="#">
+                        <img class="atleta-icone" src="raqueteicone.png" alt="">
+                    </a>
+                </div>
             </div>
         </section>
 
