--- a/contato.html
+++ b/contato.html
@@ -40,6 +40,16 @@
                         <img class="atleta-icone" src="raqueteicone.png" alt="">
                     </a>
                 </div>
+                <div class="atleta-div">
+                    <img class="atleta-imagem" src="fran.png" alt="">
+                    <h3 class="atleta-nome">WhatsApp</h3>
+                    <a href="https://api.whatsapp.com/send?phone=%2B5545999901527&context=ARBmnUiHxs3a7G856Ps0eQumrbC1-ftkdnyPwKSOltmXholcCoghb2vshbNU25N3DLknJcDn4jKF9lXet6gbIXdcc77c3c48MQH-DJU08m0fqD_2K9fvgLsZfn6n6myITMswNxw1NrhLWZGFBnzqjjNKbg&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwZXh0bgNhZW0CMTAAAR2hnay0X2-4niIT9TtUqX4OfhmqCSEwNmjnRbej17KEQ7ySMp76cDVZ4r0_aem_AZcyyRXBBZO-J1GgfFFJfka_ujS6c6E44Cu9sKCwkqsSjreX09t-K4J5ib__SbIYIkfrGVaBWcpqDgHQQyIAp1bp">
+                        <img class="atleta-icone" src="instagram (1).png" alt="">
+                    </a>
+                    <a href="#">
+                        <img class="atleta-icone" src="raqueteicone.png" alt="">
+                    </a>
+                </div>
             </div>
         </section>
 
