--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
                     <img class="atleta-imagem" src="fran.png" alt="">
                     <h3 class="atleta-nome">Facebook</h3>
                     <a href="https://www.facebook.com/mundofitcascavel/">
-                        <img class="atleta-icone" src="instagram (1).png" alt="">
+                        <img class="atleta-icone" src="facebook.png" alt="">
                     </a>
                     <a href="#">
                         <img class="atleta-icone" src="raqueteicone.png" alt="">
